# wikibias

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
docs/research/: initial.md
wikibias/: analyze.py  llm.py  schemas.py  scrape.py  source_analyzer.py  text_scanner.py  wiki.py
